gl33-master/src/test/deca/syntax/invalid/others/returnFausse.deca
/*
Test sur le syntaxe de return dans une fonction

Attention : si le fichier est modifié, il faut le vérifier à nouveau et
copier la sortie dans src/test/deca/invalid/others/expected

*/

class MyClass{
  boolean a = true;

  int myFunc(){
    return;
  }
}

{

}
